# Data_Structure-Course

List/List_Array-Based Implementation/: CMakeLists.txt  main.c
List/List_Array-Based Implementation/list/: list.c  list.h
List/List_LinkedList-Based Implementation/: CMakeLists.txt  ErrorState.h  main.c
List/List_LinkedList-Based Implementation/list/: list.c  list.h
Queue/Queue - Arraybased implementation/: CMakeLists.txt  main.c
Queue/Queue - Arraybased implementation/queue/: queue.c  queue.h
Queue/Queue - Linked_List_ based implementation/: CMakeLists.txt  main.c
Queue/Queue - Linked_List_ based implementation/queue/: queue.c  queue.h
Stack/App/: CMakeLists.txt  main.c
Stack/App/program/: program.c  program.h
Stack/App/stack/: stack.c  stack.h
Stack/Applications/Convert from infix to postfix/: CMakeLists.txt
Stack/Applications/Convert from infix to postfix/app/: main.c
Stack/Applications/Convert from infix to postfix/program/: program.c  program.h
Stack/Applications/Convert from infix to postfix/stack/: stack.c  stack.h
Stack/Stack - Array-based implementation/: main.c  stack.c  stack.h
Stack/Stack - Linked-based implementation/: main.c  stack.c  stack.h
